--- a/themes/hugo-skelett/assets/css/_2_typography.scss
+++ b/themes/hugo-skelett/assets/css/_2_typography.scss
@@ -1,13 +1,16 @@
-
 a {
   color: $primary;
   text-decoration: none;
-  -webkit-transition: all .15s cubic-bezier(.33,.66,.66,1);
-  transition: all .15s cubic-bezier(.33,.66,.66,1);
+  -webkit-transition: all .15s cubic-bezier(.33, .66, .66, 1);
+  transition: all .15s cubic-bezier(.33, .66, .66, 1);
 }
+
 a:visited {}
+
 a:hover {}
+
 a:focus {}
+
 a:active {}
 
 
@@ -18,11 +21,13 @@ main a {
   -webkit-transition: box-shadow 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
   transition: box-shadow 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
+
 main a:hover {
   color: #5ccfe6;
   border-bottom: 1px solid #2f3b54;
   box-shadow: inset 0 -7px 0 #2f3b54;
 }
+
 main a:visited {
   box-shadow: inset 0 -1px 0 #2f3b54;
 }
@@ -33,30 +38,38 @@ a:link img,
 a:hover img,
 a:focus img,
 a:active img,
-a img { border: 0; }
+a img {
+  border: 0;
+}
 
 p {
   margin: 0 0 1rem;
 }
+
 ul {
   padding: 0;
 }
+
 img {
   max-width: 100%;
   height: auto;
 }
+
 .right {
   float: right;
   margin: 0 0 0 1rem;
 }
+
 .left {
   float: left;
   margin: 0 1rem 0 0;
 }
+
 figure {
   margin: 0 0 2rem 0;
   padding: 0;
 }
+
 figcaption {
   font-size: .75rem;
   text-align: right;
@@ -73,6 +86,7 @@ figcaption {
   -webkit-transition: all 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
   transition: all 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
+
 .button:hover {
   color: #1d2433;
   border-bottom: 0;
