--- a/themes/hugo-skelett/assets/css/_7_footer.scss
+++ b/themes/hugo-skelett/assets/css/_7_footer.scss
@@ -5,21 +5,54 @@ footer {
   color: #a2aabc;
   background: #1d2433;
 }
+
 .no-bullet {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
+
 footer a {
   color: #a2aabc;
-  box-shadow: inset 0 0px 0 #a2aabc;
+  box-shadow: inset 0 0 0 #a2aabc;
   border-bottom: 1px solid #a2aabc;
   -webkit-transition: box-shadow 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
   transition: box-shadow 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
 }
+
 footer a:hover {
   color: #5ccfe6;
   border-bottom: 1px solid #d7dce2;
   box-shadow: inset 0 -3px 0 #d7dce2;
 }
 
+footer #social--media li {
+  display: inline-block;
+}
+
+footer #social--media a {
+  border: 0;
+}
+
+footer #social--media a:hover {
+  border: 0;
+  box-shadow: inset 0 0 0 #a2aabc;
+  fill: #d7dce2;
+}
+
+footer #social--media a svg {
+  transform: scale(1, 1);
+  -webkit-transition: all 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
+  transition: all 0.4s cubic-bezier(0.33, 0.66, 0.66, 1);
+}
+
+footer #social--media a svg:hover {
+  fill: #5ccfe6;
+  transform: scale(1.5, 1.5);
+}
+
+footer .social--icon {
+  width: 3rem;
+  height: 3rem;
+  fill: #a2aabc;
+}
