--- a/themes/hugo-skelett/layouts/partials/5_footer.html
+++ b/themes/hugo-skelett/layouts/partials/5_footer.html
@@ -1,29 +1,44 @@
-  <footer>
-    <div class="wrapper raster--spalten--3">
-       <div>
-        <nav role="service">
-          <ul class="no-bullet">
-            <li><a href="#" target="_blank">Start</a></li>
-            <li><a href="#" target="_blank">Kontakt</a></li>
-            <li><a href="#" target="_blank">Newsletter</a></li>
-            <li><a href="#" target="_blank">Impressum</a></li>
-            <li><a href="#" target="_blank">Datenschutz</a></li>
-          </ul>
-        </nav>
-      </div><!-- / spalte--1 -->
-
-      <div>
-        <nav role="social-media">
-          <ul class="no-bullet">
-            <li><a href="#" target="_blank">Github</a></li>
-            <li><a href="#" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank">Instagram</a></li>
-          </ul>
-        </nav>
-      </div><!-- / spalte--2 -->
-      
-      <div>
-      </div><!-- / spalte--3 -->
-
-    </div><!-- / .raster--spalten--3-->
-  </footer>
+<footer>
+  <div class="wrapper raster--spalten--3">
+    <div>
+      <p>
+        Ari Glamslam programmiert und schreibt über Spiele.
+      </p>
+    </div><!-- / spalte--1 -->
+    <div>
+      <nav id="service" role="service">
+        <ul class="no-bullet">
+          <li><a href="#" target="_blank">Start</a></li>
+          <li><a href="#" target="_blank">Kontakt</a></li>
+          <li><a href="#" target="_blank">Newsletter</a></li>
+          <li><a href="#" target="_blank">Impressum</a></li>
+          <li><a href="#" target="_blank">Datenschutz</a></li>
+        </ul>
+      </nav>
+    </div><!-- / spalte--2 -->
+    <div>
+      <nav id="social--media" role="social-media">
+        <ul class="no-bullet">
+          <li>
+            <a id="twitter" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z" /></svg>
+            </a>
+          </li>
+          <li>
+            <a id="github" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M400 139c144 0 260 116 260 260 0 115-75 213-178 247-9 3-17-2-17-13v-71c0-35-18-48-18-48 57-6 119-28 119-128 0-44-27-70-27-70s14-29-2-69c0 0-22-7-72 27-42-12-88-12-130 0-50-34-72-27-72-27-16 40-2 69-2 69s-27 26-27 70c0 100 62 122 119 128 0 0-14 10-17 35-15 7-53 18-76-22 0 0-13-25-39-27 0 0-26 0-2 16 0 0 17 8 29 38 0 0 16 51 88 35v44c0 11-9 16-18 13-103-34-178-132-178-247 0-144 116-260 260-260z" /></svg>
+            </a>
+          </li>
+          <li>
+            <a id="facebook" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M604 170c15 0 26 11 26 26v408c0 15-11 26-26 26H487V452h60l9-70h-69v-44c0-20 6-34 35-34h37v-62s-24-3-54-3c-53 0-89 33-89 92v51h-60v70h60v178H196c-15 0-26-11-26-26V196c0-15 11-26 26-26h408z" /></svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div><!-- / spalte--3 -->
+  </div><!-- / .raster--spalten--3-->
+</footer>
